// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarryBg blank renders correctly 1`] = `
<div
  className="root"
>
  <div
    className="stars"
  />
</div>
`;

exports[`StarryBg content renders correctly 1`] = `
<div
  className="root"
>
  <div
    className="stars"
  />
  <div
    className="content"
  >
    floating over the starry sky...
  </div>
</div>
`;
